修改了检索详细商品数据功能返回的数据中的部分结构